# Resonance

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  architecture.md  cliff.toml  prototype.ipynb  pyproject.toml  server_setup.ipynb  test_API.ipynb  test_prototype.py
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.cursor/skills/designing-errors/: SKILL.md  references.md
.github/workflows/: bcs-rs-release.yml  ci.yml  pages.yml
bcs-rs/: Cargo.toml  README.md  build.rs  pyproject.toml
bcs-rs/src/: lib.rs  transport.rs  z85.rs
bcs-rs/src/bcs_rs/: BCSz.py  __init__.py  _core.pyi  server.py
bcs-rs/tests/: test_bcs_rs.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/adr/: 0001-astral-ecosystem-migration.md
docs/api/: ai.rst  beamline.rst  data.rst  det.rst  dio.rst  mcp.rst  motors.rst  scan.rst  types.rst  utils.rst
docs/examples/: grid_scan.rst  run_writer.rst
docs/user_guide/: installation.rst  quickstart.rst
notebooks/: nexafs-processing.ipynb  nexafs-running.ipynb  nexafs_results.csv  out.csv  prototype-freerun.ipynb  prototype-img.ipynb  prototype.ipynb  ps_100kd.parquet  testing_bcs_rs.ipynb  testing_dg_xin.ipynb
src/api_dev/: __init__.py  core.py  scan.py  server.py  types.py  validation.py
src/api_dev/nexafs/: __init__.py  nexafs_directory.py  nexafs_io.py
src/mcp_server/tools/: ai_tools.py
src/resonance/: __init__.py
src/resonance/api/: __init__.py  accessors.py  core.py  header_map.py  scan.py  server.py  types.py  utils.py  validation.py
src/resonance/api/core/: __init__.py  ai.py  beamline.py  det.py  dio.py  motors.py  primitives.py  scan.py
src/resonance/api/data/: __init__.py  catalog.py  compression.py  models.py  schema.py  writer.py
src/resonance/api/nexafs/: __init__.py  nexafs.py  nexafs_directory.py  nexafs_io.py
src/resonance/mcp/: __main__.py  connection.py
src/resonance/mcp/tools/: ai_tools.py  dio_tools.py  motor_tools.py
tests/: __init__.py  test_data_catalog.py  test_data_compression.py  test_data_schema.py  test_data_writer.py  test_det.py  test_resonance.py  test_scan_detector.py
