[package]
name = "bcs_rs"
version = "0.1.7"
edition = "2021"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.11.0"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py39"] }
rayon = "1"
serde = "1.0.228"
serde_json = "1.0.149"
wide  = "0.7"
zmq = "0.10.0"
