[project]
name = "bcs-rs"
version = "0.1.7"
description = "High-performance Rust extension for BCS data decoding"
readme = "README.md"
authors = [
    { name = "Harlan D Heilman", email = "73567020+HarlanHeilman@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[tool.maturin]
module-name = "bcs_rs._core"
python-packages = ["bcs_rs"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
]
